@@ -1,3 +1,11 @@
+Wed Feb  7 20:46:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Collocation_Exception_Test/Client_Task.cpp:
+          Also test the minor code of the exception caught
+
+        * tao/POA/Default_Servant/Default_Servant.cpp:
+          Layout change
+
 Wed Feb  7 20:16:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/AnyTypeCode/Alias_TypeCode.cpp:
